# livesplit-one-terminal

./: Cargo.toml
src/: main.rs
