[package]
authors = ["chris", "Neil 'presjpolk' Stevens"]
name = "livesplit-one-terminal"
version = "0.1.0"

[dependencies]
getopts = "0.2"
livesplit-core = "0.7.0"
termion = "1.5.1"
tui = "0.1.3"

[profile.release]
opt-level = 2
debug = false
lto = true
codegen-units = 0

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 1
