[package]
authors = ["chris", "Neil 'presjpolk' Stevens"]
name = "livesplit-one-terminal"
version = "0.2.0"

[dependencies]
livesplit-core = "0.7.0"
structopt = "0.1"
structopt-derive = "0.1"
termion = "1.5.1"
tui = "0.1.3"

[profile.release]
opt-level = 2
debug = false
lto = true
codegen-units = 0

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 1
